# tree-sitter-chat

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.chat  example1.chat  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-chat.h  tree-sitter-chat.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_chat/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterChatTests/: TreeSitterChatTests.swift
chats/: example.chat  example1.chat  start.chat  text.chat  variable.chat
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt  empty_content.txt
