[package]
name = "tree-sitter-chat"
description = "llm chat file format"
version = "0.1.0"
authors = ["Ilya Ovdin <iovdin@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "chat"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/iovdin/tree-sitter-chat"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
